fix: add scss for mobile scrollbar

--- a/packages/trader/src/sass/app/_common/components/contract-type-info.scss
+++ b/packages/trader/src/sass/app/_common/components/contract-type-info.scss
@@ -111,6 +111,9 @@
     &__scrollbars {
         margin-top: 2.4rem;
         margin-bottom: auto;
+        @include mobile {
+            max-height: 100% !important;
+        }
     }
     &__button {
         margin-top: 2.4rem;
